generator client {
  provider = "prisma-client-js"
  output   = "../../../../node_modules/.prisma/user-client"
}

generator dbml {
  provider   = "prisma-dbml-generator"
  output     = "../../../../dbml"
  outputName = "user-schema.dbml"
}

datasource db {
  provider = "mongodb"
  url      = env("USER_SERVICE_DB_URL")
}

model Follow {
  id          String      @id @default(auto()) @map("_id") @db.ObjectId
  followerId  String      @db.ObjectId
  followingId String      @db.ObjectId
  follower    UserProfile @relation("UserFollowing", fields: [followerId], references: [id])
  following   UserProfile @relation("UserFollowers", fields: [followingId], references: [id])
  createdAt   DateTime    @default(now())

  @@unique([followerId, followingId])
  @@index([followerId])
  @@index([followingId])
}

// Shop followers - users following shops (cross-service reference)
model ShopFollower {
  id        String   @id @default(auto()) @map("_id") @db.ObjectId
  userId    String   @db.ObjectId // References auth-service User.id
  shopId    String   @db.ObjectId // References seller-service Shop.id
  createdAt DateTime @default(now())

  @@unique([userId, shopId]) // One follow per user per shop
  @@index([shopId]) // Fast lookup: get all followers of a shop
  @@index([userId]) // Fast lookup: get all shops a user follows
}

enum ImageType {
  AVATAR
  COVER
  GALLERY
}

model Image {
  id            String      @id @default(auto()) @map("_id") @db.ObjectId
  file_id       String
  url           String
  imageType     ImageType   @default(AVATAR)
  userProfile   UserProfile @relation(fields: [userProfileId], references: [id], onDelete: Cascade)
  userProfileId String      @db.ObjectId
  createdAt     DateTime    @default(now())

  @@index([userProfileId, imageType])
}

model UserProfile {
  id      String  @id @default(auto()) @map("_id") @db.ObjectId
  userId  String  @unique @db.ObjectId // References auth-service User.id
  name    String
  bio     String?
  picture String?

  // Image relationships
  images Image[]

  // Following relationships
  followers Follow[] @relation("UserFollowers")
  following Follow[] @relation("UserFollowing")

  // Shipping addresses
  shippingAddresses ShippingAddress[]

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}

model ShippingAddress {
  id            String      @id @default(auto()) @map("_id") @db.ObjectId
  userId        String      @db.ObjectId // References auth-service User.id
  userProfile   UserProfile @relation(fields: [userProfileId], references: [id], onDelete: Cascade)
  userProfileId String      @db.ObjectId

  // Address fields
  label       String // Home, Work, Others
  name        String // Recipient name
  street      String
  city        String
  state       String? // Optional - not all countries use states
  zipCode     String
  country     String
  phoneNumber String? // Optional - useful for delivery

  // Metadata
  isDefault Boolean  @default(false)
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@index([userId])
  @@index([userProfileId])
  @@index([userId, isDefault]) // Query default address efficiently
}

model SiteLayout {
  id         String      @id @default(auto()) @map("_id") @db.ObjectId
  logo       String?
  banner     String?
  heroSlides HeroSlide[]
  updatedAt  DateTime    @updatedAt
  createdAt  DateTime    @default(now())
}

model HeroSlide {
  id           String     @id @default(auto()) @map("_id") @db.ObjectId
  siteLayout   SiteLayout @relation(fields: [siteLayoutId], references: [id], onDelete: Cascade)
  siteLayoutId String     @db.ObjectId
  title        String
  subtitle     String?
  imageUrl     String
  actionUrl    String?
  actionLabel  String?
  order        Int        @default(0)
  isActive     Boolean    @default(true)
  /// Locale-keyed translations: { "pt-BR": { title, subtitle, actionLabel } }
  translations Json?
  createdAt    DateTime   @default(now())
  updatedAt    DateTime   @updatedAt

  @@index([siteLayoutId])
}
