//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table Follow {
  id String [pk]
  followerId String [not null]
  followingId String [not null]
  follower UserProfile [not null]
  following UserProfile [not null]
  createdAt DateTime [default: `now()`, not null]

  indexes {
    (followerId, followingId) [unique]
  }
}

Table ShopFollower {
  id String [pk]
  userId String [not null]
  shopId String [not null]
  createdAt DateTime [default: `now()`, not null]

  indexes {
    (userId, shopId) [unique]
  }
}

Table Image {
  id String [pk]
  file_id String [not null]
  url String [not null]
  imageType ImageType [not null, default: 'AVATAR']
  userProfile UserProfile [not null]
  userProfileId String [not null]
  createdAt DateTime [default: `now()`, not null]
}

Table UserProfile {
  id String [pk]
  userId String [unique, not null]
  name String [not null]
  bio String
  picture String
  images Image [not null]
  followers Follow [not null]
  following Follow [not null]
  shippingAddresses ShippingAddress [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table ShippingAddress {
  id String [pk]
  userId String [not null]
  userProfile UserProfile [not null]
  userProfileId String [not null]
  label String [not null]
  name String [not null]
  street String [not null]
  city String [not null]
  state String
  zipCode String [not null]
  country String [not null]
  phoneNumber String
  isDefault Boolean [not null, default: false]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table SiteLayout {
  id String [pk]
  logo String
  banner String
  heroSlides HeroSlide [not null]
  updatedAt DateTime [not null]
  createdAt DateTime [default: `now()`, not null]
}

Table HeroSlide {
  id String [pk]
  siteLayout SiteLayout [not null]
  siteLayoutId String [not null]
  title String [not null]
  subtitle String
  imageUrl String [not null]
  actionUrl String
  actionLabel String
  order Int [not null, default: 0]
  isActive Boolean [not null, default: true]
  translations Json [note: 'Locale-keyed translations: { "pt-BR": { title, subtitle, actionLabel } }']
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Enum ImageType {
  AVATAR
  COVER
  GALLERY
}

Ref: Follow.followerId > UserProfile.id

Ref: Follow.followingId > UserProfile.id

Ref: Image.userProfileId > UserProfile.id [delete: Cascade]

Ref: ShippingAddress.userProfileId > UserProfile.id [delete: Cascade]

Ref: HeroSlide.siteLayoutId > SiteLayout.id [delete: Cascade]